# Dush.kz

./: .gitignore  AGENTS.md  README.md
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  AGENTS.md  pyproject.toml
backend/app/: __init__.py  admin_api.py  admin_schemas.py  api.py  config.py  database.py  main.py  media.py  models.py  payments.py  permissions.py  publishing.py  schemas.py  security.py  telegram.py
backend/scripts/: export_overrides.py  import_catalog.py  migrate_cms.py  setup_admin.py  telegram_setup.py
backend/tests/: conftest.py  test_admin_permissions.py  test_api.py  test_import_catalog.py  test_payments.py  test_telegram.py
deploy/: make-release.sh  publish.sh  server-release.sh  sync-catalog-media.sh
deploy/nginx/: dush.kz.conf
deploy/systemd/: dush-api.service  dush-publish.path  dush-publish.service
docs/: media-import.md
parser/: additions.json  additions_build.py  apply_additions.py  apply_combos.py  apply_overrides.py  build_web_data.py  categories.json  clean_dims.py  combos.json  dims-clean.json  generate_feed.py  photos-clean.json  price-rules.json  redownload_by_slug.py  remove_watermarks.py  scrape.py  split_installations.py
parser/data/: akrilovye-vanny.json  chugunnye-vanny.json  derzhatel-dlya-fena.json  derzhatel-dlya-stakana.json  derzhatel-dlya-tualetnoj-bumagi.json  derzhatel-vatnykh-diskov.json  dispenser-dlya-bumagi.json  dlya-bide.json  dlya-dusha.json  dlya-kukhni-s-gibkim-izlivom.json  dlya-kukhni.json  dozator.json  (+70 more)
web/: next.config.ts  package-lock.json  package.json
(+107 files in other folders)
